--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
             <div class="icon">🔢</div>
             <span>계산기</span>
         </a>
+        <a href="tetris.html" class="menu-button">
+            <div class="icon">🧱</div>
+            <span>테트리스</span>
+        </a>
     </div>
 </body>
 </html>
