--- a/index.html
+++ b/index.html
@@ -176,6 +176,10 @@
             <div class="icon">🧱</div>
             <span>테트리스</span>
         </a>
+        <a href="mole.html" class="menu-button">
+            <div class="icon">🔨</div>
+            <span>두더지</span>
+        </a>
     </div>
 </body>
 </html>
