--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
             <div class="icon">🔨</div>
             <span>두더지</span>
         </a>
+        <a href="shoot.html" class="menu-button">
+            <div class="icon">🔫</div>
+            <span>슈팅</span>
+        </a>
     </div>
 </body>
 </html>
